# 2023-cpl-coding

./: .gitignore  CMakeLists.txt  LICENSE  guess.c  hello.c
0-intro/: hello.c
1-types-io/: circle.c
homework/: CMakeLists.txt  homework1-1.c  homework1-2.c  homework1-3.c  homework1-4.c  homework1-5.c  homework1-6.c  homework1-7.c  homeworktest.c
