cmake_minimum_required(VERSION 3.25)
project(2023-cpl-coding C)

set(CMAKE_C_STANDARD 17)

add_executable(hello hello.c)
add_executable(guess guess.c)
add_executable(homework1-1 homework1-1.c)
add_executable(homework1-2 homework1-2.c)
add_executable(homework1-3 homework1-3.c)
add_executable(homework1-4 homework1-4.c)
add_executable(homework1-5 homework1-5.c)
add_executable(homework1-6 homework1-6.c)
#gcc hello.c -o hello