add_executable(homework1-1 homework/homework1-1.c)
add_executable(homework1-2 homework/homework1-2.c)
add_executable(homework1-3 homework/homework1-3.c)
add_executable(homework1-4 homework/homework1-4.c)
add_executable(homework1-5 homework/homework1-5.c)
add_executable(homework1-6 homework/homework1-6.c)
add_executable(homework1-7 homework/homework1-7.c)
add_executable(homeworktest homework/homeworktest.c)